01-sample.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginxx
      image: nginx:1.19
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: demo-mc
spec:
  containers:
    - name: nginx
      image: nginx:1.19
      ports:
        - containerPort: 80
    - name: debug
      image: rkalluru/debug
