08-configmap.yml
apiVersion: v1
kind: Pod
metadata:
  name: cm-demo-1
spec:
  containers:
    - name: debug
      image: rkalluru/debug
---
apiVersion: v1
kind: Pod
metadata:
  name: cm-demo-2
spec:
  containers:
    - name: debug
      image: rkalluru/debug
---
apiVersion: v1
kind: Pod
metadata:
  name: cm-demo-3
spec:
  containers:
    - name: debug
      image: rkalluru/debug
      volumeMounts:
        - name: cm
          mountPath: "/data"
          readOnly: true
  volumes:
    - name: cm
      configMap:
        name: cm-demo
