14-secure-container.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    nname: example
  name: example
---
apiVersion: v1
kind: Pod
metadata:
  name: debug1-13-np
  namespace: example
  labels:
    podName: debug1-13-np
spec:
  containers:
    - name: debug
      image: rkalluru/debug:latest
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        runAsUser: 10000
        runAsGroup: 10000
        runAsNonRoot: true
        capabilities:
          drop:
            - ALL
