17-node-autoscaler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoscaler-17
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 1%
      maxUnavailable: 1%
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: node-autoscaler
          image: rkalluru/debug:hpa
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "700m"
              memory: "1000Mi"
