19-taints-n-tolerations.yml
apiVersion: v1
kind: Pod
metadata:
  name: tolerations-19
  labels:
    env: test
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
  tolerations:
  - key: "key1"
    operator: "Equal"
    value: "value1"
    effect: "NoSchedule"
