20-topology.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topology-20
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      name: topology-20
  strategy:
    rollingUpdate:
      maxSurge: 1%
      maxUnavailable: 1%
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: nginx
        name: topology-20
    spec:
      topologySpreadConstraints:
        - maxSkew: 2
          minDomains: 1
          topologyKey: topology.kubernetes.io
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              name: topology-20
          nodeAffinityPolicy: Ignore # optional; beta since v1.26
          nodeTaintsPolicy: Ignore # optional; beta since v1.26
      ### other Pod fields go here
      containers:
        - name: node-autoscaler
          image: rkalluru/debug:hpa
